dev/collab/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: dev-collab
  annotations:
    linkerd.io/inject: enabled
  name: dev-collab
