dev/collab/db.yaml
apiVersion: v1
kind: Service
metadata:
  name: collab-db
  namespace: dev
spec:
  clusterIP: None
  ports: 
    - name: "mysql"
      protocol: TCP
      port: 3306
  selector: {}
---
kind: Endpoints
apiVersion: v1
metadata:
  name: collab-db
  namespace: dev
subsets: 
- addresses:
  - ip: "10.0.17.4"
  ports:
  - name: "mysql"
    port: 3306
