dev/collab/web.yaml
apiVersion: v1
kind: Service
metadata:
  name: collab
  namespace: dev
  labels:
    app: collab
spec:
  ports:
    - protocol: TCP
      port: 80
  selector: 
    app: collab
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: collab-deployment
  namespace: dev
spec:
  replicas: 1
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: collab
    spec:
      containers:
      - name: collab
        image: phanoix/gcconnex:opcache
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /splash/
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 5
          timeoutSeconds: 4
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /splash/
            port: 80
          initialDelaySeconds: 90
          periodSeconds: 10
          timeoutSeconds: 4
          failureThreshold: 3
        resources:
          requests:
            memory: "128Mi"
            cpu: "0.25"
          limits:
            memory: "256Mi"
            cpu: "0.5"
        volumeMounts:
        - mountPath: /sites/gccollab_data
          name: collab-data-volume
        - mountPath: /var/www/html/cometchat
          name: collab-chat-volume
        - mountPath: /var/www/html/engine/settings.php
          subPath: settings.php
          name: collab-settings
      - name: collab-memcached
        image: memcached:alpine
        ports:
        - containerPort: 11211
        resources:
          requests:
            memory: "64Mi"
            cpu: "0.05"
          limits:
            memory: "96Mi"
            cpu: "0.2"
      volumes:
      - name: collab-data-volume
        persistentVolumeClaim:
          claimName: dev-collab-data-volume-claim
      - name: collab-chat-volume
        persistentVolumeClaim:
          claimName: dev-collab-chat-volume-claim
      - name: collab-settings
        configMap:
          optional: true
          name: collab-config
