dev/collab/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: collab-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - dev.gccollab.ca
    secretName: collab-dev-tls-secret
  rules:
  - host: dev.gccollab.ca
    http:
      paths:
      - path: /
        backend:
          serviceName: collab
          servicePort: 80
